--- a/package.json
+++ b/package.json
@@ -3,8 +3,31 @@
   "version": "1.0.0-dev.3",
   "license": "GPLv3",
   "simTitleStringKey": "PENDULUM_LAB/pendulum-lab.name",
-  "phetLibs": "pendulum-lab assert axon brand chipper dot joist kite phet-core phetcommon scenery scenery-phet sherpa sun",
-  "preload": "../assert/js/assert.js ../sherpa/jquery-2.1.0.js ../sherpa/lodash-2.4.1.js ../sherpa/has.js ../sherpa/FileSaver.js ../chipper/js/initialize-globals.js ../phetcommon/js/analytics/google-analytics.js",
+  "phetLibs": [
+    "pendulum-lab",
+    "assert",
+    "axon",
+    "brand",
+    "chipper",
+    "dot",
+    "joist",
+    "kite",
+    "phet-core",
+    "phetcommon",
+    "scenery",
+    "scenery-phet",
+    "sherpa",
+    "sun"
+  ],
+  "preload": [
+    "../assert/js/assert.js",
+    "../sherpa/jquery-2.1.0.js",
+    "../sherpa/lodash-2.4.1.js",
+    "../sherpa/has.js",
+    "../sherpa/FileSaver.js",
+    "../chipper/js/initialize-globals.js",
+    "../phetcommon/js/analytics/google-analytics.js"
+  ],
   "repository": {
     "type": "git",
     "url": "https://github.com/phetsims/pendulum-lab.git"
