--- a/package.json
+++ b/package.json
@@ -4,21 +4,7 @@
   "license": "GPLv3",
   "simTitleStringKey": "PENDULUM_LAB/pendulum-lab.name",
   "phetLibs": [
-    "pendulum-lab",
-    "assert",
-    "axon",
-    "babel",
-    "brand",
-    "chipper",
-    "dot",
-    "joist",
-    "kite",
-    "phet-core",
-    "phetcommon",
-    "scenery",
-    "scenery-phet",
-    "sherpa",
-    "sun"
+    "pendulum-lab"
   ],
   "repository": {
     "type": "git",
