--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "pendulum-lab",
   "version": "1.0.0-dev.4",
   "license": "GPLv3",
+  "requirejsNamespace": "PENDULUM_LAB",
   "simTitleStringKey": "PENDULUM_LAB/pendulum-lab.name",
   "phetLibs": [
     "pendulum-lab"
