--- a/package.json
+++ b/package.json
@@ -14,7 +14,6 @@
     "requirejs": "~2.1.8"
   },
   "phet": {
-    "requirejsNamespace": "PENDULUM_LAB",
-    "simTitleStringKey": "PENDULUM_LAB/pendulum-lab.name"
+    "requirejsNamespace": "PENDULUM_LAB"
   }
 }
