--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "pendulum-lab",
   "version": "1.0.0-dev.5",
-  "license": "GPLv3",
+  "license": "GPL-3.0",
   "repository": {
     "type": "git",
     "url": "https://github.com/phetsims/pendulum-lab.git"
