--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "pendulum-lab",
-  "version": "1.0.0-rc.1",
+  "version": "1.1.0-dev.1",
   "license": "GPL-3.0",
   "repository": {
     "type": "git",
