--- a/package.json
+++ b/package.json
@@ -10,6 +10,11 @@
     "grunt": "~1.0.0"
   },
   "phet": {
-    "requirejsNamespace": "PENDULUM_LAB"
+    "requirejsNamespace": "PENDULUM_LAB",
+    "runnable": true,
+    "supportedBrands": [
+      "phet"
+    ],
+    "simulation": true
   }
 }
