Adding adapted-from-phet to supportedBrands

--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "requirejsNamespace": "PENDULUM_LAB",
     "runnable": true,
     "supportedBrands": [
-      "phet"
+      "phet",
+      "adapted-from-phet"
     ],
     "simulation": true
   }
