Using BarChartNode instead of sim-specific EnergyBarChartNode. See https://github.com/phetsims/griddle/issues/22

--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
   },
   "phet": {
     "requirejsNamespace": "PENDULUM_LAB",
+    "phetLibs": [
+      "griddle"
+    ],
     "runnable": true,
     "supportedBrands": [
       "phet",
