fix type check, see https://github.com/phetsims/sun/issues/697

--- a/package.json
+++ b/package.json
@@ -20,6 +20,10 @@
       "adapted-from-phet"
     ],
     "simulation": true,
+    "simFeatures": {
+      "supportsSound": true
+    },
+
     "supportsOutputJS": true
   },
   "eslintConfig": {
