--- a/package.json
+++ b/package.json
@@ -23,8 +23,8 @@
     "simFeatures": {
       "supportsSound": true
     },
-
-    "supportsOutputJS": true
+    "supportsOutputJS": true,
+    "published": true
   },
   "eslintConfig": {
     "extends": "../chipper/eslint/sim_eslintrc.js"
