--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "pendulum-lab",
-  "version": "1.0.30-rc.2",
+  "version": "1.0.30",
   "license": "GPL-3.0",
   "repository": {
     "type": "git",
