Convert tsconfig to use project references, see https://github.com/phetsims/chipper/issues/1356

--- a/package.json
+++ b/package.json
@@ -32,6 +32,18 @@
     ]
   },
   "eslintConfig": {
-    "extends": "../chipper/eslint/sim_eslintrc.js"
+    "extends": "../chipper/eslint/sim_eslintrc.js",
+    "overrides": [
+      {
+        "files": [
+          "**/*.ts"
+        ],
+        "parserOptions": {
+          "project": [
+            "../pendulum-lab/tsconfig.json"
+          ]
+        }
+      }
+    ]
   }
 }
