--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
         ],
         "parserOptions": {
           "project": [
-            "../pendulum-lab/tsconfig.json"
+            "../chipper/tsconfig/eslint-all/tsconfig.json"
           ]
         }
       }
